--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "olasearch",
-  "version": "2.1.6",
+  "version": "2.1.7",
   "description": "OlaSearch is a fully customisable front-end search interface that brings your information collection to life.",
   "main": "lib/index.js",
   "scripts": {
     "clean": "rimraf dist lib",
     "watch": "BABEL_ENV=production babel --watch src --out-dir lib",
     "watch2": "BABEL_ENV=production babel ./node_modules/rambda/modules --out-dir ./node_modules/rambda/modules",
-    "release": "cross-env NODE_ENV=production webpack --config webpack.release.js --json > stats.json && gulp build",
+    "release": "cross-env NODE_ENV=production webpack --config webpack.release.js --json > stats.json && gulp build && rimraf dist/polyfill.js dist/olasearch.core.latest.js",
     "lint": "npm run standard && eslint src",
     "nyc": "nyc npm run test",
     "test": "BABEL_ENV=production mocha --compilers js:babel-register --recursive --require ./test/setup.js",
@@ -121,7 +121,7 @@
     "nouislider": "^10.1.0",
     "prop-types": "^15.6.0",
     "query-string": "^5.0.1",
-    "rambda": "^1.0.6",
+    "ramda": "^0.25.0",
     "react-list": "^0.8.8",
     "react-onclickoutside": "^6.7.0",
     "react-pikaday-datepicker": "3.0.1",
