--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "olasearch",
-  "version": "2.1.7",
+  "name": "@olasearch/core",
+  "version": "2.1.8",
   "description": "OlaSearch is a fully customisable front-end search interface that brings your information collection to life.",
   "main": "lib/index.js",
   "scripts": {
