--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@gitlab.com/olasearch/olasearch-core.git"
+    "url": "://gitlab.com/olasearch/olasearch-core.git"
   },
   "keywords": [
     "olasearch"
@@ -126,6 +126,7 @@
     "react-list": "^0.8.8",
     "react-onclickoutside": "^6.7.0",
     "react-pikaday-datepicker": "3.0.1",
+    "react-tiny-virtual-list": "^2.1.4",
     "redux-logger": "^3.0.6",
     "xss-filters": "^1.2.7"
   },
