--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@olasearch/core",
-  "version": "2.2.4",
+  "version": "2.2.5",
   "description": "OlaSearch is a fully customisable front-end search interface that brings your information collection to life.",
   "main": "lib/index.js",
   "scripts": {
@@ -13,7 +13,7 @@
     "test:watch": "npm test -- --watch",
     "coverage": "cross-env BABEL_ENV=production babel-node $(npm bin)/isparta cover $(npm bin)/_mocha -- --recursive",
     "retire": "retire",
-    "s3:deploy": "s3-deploy './dist/olasearch.core.min.latest.js' --cwd './dist/' --region ap-southeast-1 --bucket configs.olasearch.com/assets/js --cache 604800,public && s3-deploy './dist/olasearch.core.min.css' --cwd './dist/' --region ap-southeast-1 --bucket configs.olasearch.com/assets/css --cache 604800,public",
+    "s3:deploy": "s3-deploy './dist/olasearch.core.min.latest.js' './dist/olasearch.init.min.js' --cwd './dist/' --region ap-southeast-1 --bucket configs.olasearch.com/assets/js --cache 604800,public && s3-deploy './dist/olasearch.core.min.css' --cwd './dist/' --region ap-southeast-1 --bucket configs.olasearch.com/assets/css --cache 604800,public",
     "cdn:invalidate": "cf-invalidate E1MMHSLEW3SZPY /assets/*",
     "styleguide": "styleguidist server",
     "styleguidist:build": "styleguidist build",
@@ -83,12 +83,12 @@
     "jsdom": "^11.5.1",
     "lint-staged": "^6.0.0",
     "mocha": "^4.0.1",
-    "nyc": "^11.3.0",
+    "nyc": "^11.4.1",
     "prettier-standard": "^7.0.3",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
-    "react-styleguidist": "^6.0.33",
+    "react-styleguidist": "^6.1.0",
     "react-test-renderer": "^16.2.0",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
@@ -97,10 +97,10 @@
     "s3-deploy": "^0.8.0",
     "snazzy": "^7.0.0",
     "standard": "^10.0.3",
-    "uglifyjs-webpack-plugin": "^1.1.2",
-    "webpack": "^3.9.1",
+    "uglifyjs-webpack-plugin": "^1.1.4",
+    "webpack": "^3.10.0",
     "webpack-bundle-size-analyzer": "^2.7.0",
-    "webpack-dev-middleware": "^1.12.2",
+    "webpack-dev-middleware": "^2.0.2",
     "webpack-hot-middleware": "^2.21.0"
   },
   "peerDependencies": {
@@ -121,6 +121,7 @@
     "prop-types": "^15.6.0",
     "query-string": "^5.0.1",
     "ramda": "^0.25.0",
+    "react-line-progress": "^1.0.3",
     "react-list": "^0.8.8",
     "react-onclickoutside": "^6.7.0",
     "react-pikaday-datepicker": "3.0.1",
