--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "babel-eslint": "^8.0.3",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-flow": "^6.23.0",
     "babel-preset-olasearch": "^1.0.4",
     "babel-preset-react-hmre": "^1.0.0",
     "babel-register": "^6.26.0",
@@ -75,6 +76,7 @@
     "expect": "^1.20.2",
     "expose-loader": "^0.7.4",
     "express": "^4.16.2",
+    "flow-bin": "^0.62.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-rename": "^1.2.2",
