--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "retire": "retire",
     "s3:deploy": "s3-deploy './dist/olasearch.core.min.latest.js' './dist/olasearch.init.min.js' --cwd './dist/' --region ap-southeast-1 --bucket configs.olasearch.com/assets/js --cache 604800,public && s3-deploy './dist/olasearch.core.min.css' --cwd './dist/' --region ap-southeast-1 --bucket configs.olasearch.com/assets/css --cache 604800,public",
     "cdn:invalidate": "cf-invalidate E1MMHSLEW3SZPY /assets/*",
-    "styleguide": "styleguidist server",
-    "styleguidist:build": "styleguidist build",
+    "docs": "styleguidist server",
+    "docs:build": "styleguidist build",
     "prettier-standard": "prettier-standard 'src/**/!(polyfill)*.js'"
   },
   "prettier": {
@@ -57,19 +57,22 @@
     ]
   },
   "devDependencies": {
+    "@olasearch/logger": "^1.1.5",
+    "@olasearch/solr-adapter": "^1.3.9",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
-    "babel-eslint": "^8.0.3",
+    "babel-eslint": "^8.1.2",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-olasearch": "^1.0.4",
     "babel-preset-react-hmre": "^1.0.0",
     "babel-register": "^6.26.0",
-    "chokidar": "^1.7.0",
+    "chokidar": "^2.0.0",
     "cloudfront-invalidate-cli": "^1.4.0",
-    "cross-env": "^5.1.1",
-    "enzyme": "^3.2.0",
+    "cross-env": "^5.1.3",
+    "css-loader": "^0.28.7",
+    "enzyme": "^3.3.0",
     "eslint": "3.19.0",
     "eslint-plugin-babel": "^4.1.2",
     "eslint-plugin-react": "^7.5.1",
@@ -84,9 +87,10 @@
     "isparta": "^4.0.0",
     "jsdom": "^11.5.1",
     "lint-staged": "^6.0.0",
-    "mocha": "^4.0.1",
+    "mocha": "^4.1.0",
+    "node-sass": "^4.7.2",
     "nyc": "^11.4.1",
-    "prettier-standard": "^7.0.3",
+    "prettier-standard": "^8.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
@@ -97,12 +101,14 @@
     "retire": "^1.4.0",
     "rimraf": "^2.6.2",
     "s3-deploy": "^0.8.0",
+    "sass-loader": "^6.0.6",
     "snazzy": "^7.0.0",
     "standard": "^10.0.3",
-    "uglifyjs-webpack-plugin": "^1.1.4",
+    "style-loader": "^0.19.1",
+    "uglifyjs-webpack-plugin": "^1.1.5",
     "webpack": "^3.10.0",
     "webpack-bundle-size-analyzer": "^2.7.0",
-    "webpack-dev-middleware": "^2.0.2",
+    "webpack-dev-middleware": "^2.0.3",
     "webpack-hot-middleware": "^2.21.0"
   },
   "peerDependencies": {
