--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "collectCoverageFrom": [
       "**/src/**"
     ],
+    "testEnvironment": "jsdom",
     "testMatch": [
       "**/*.spec.js"
     ],
@@ -73,45 +74,45 @@
   },
   "devDependencies": {
     "@olasearch/logger": "^1.2.0",
-    "@olasearch/solr-adapter": "^1.4.2",
+    "@olasearch/solr-adapter": "^1.4.7",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
-    "babel-eslint": "^8.1.2",
+    "babel-eslint": "^8.2.1",
     "babel-jest": "^22.1.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-olasearch": "^1.0.4",
-    "babel-preset-react-hmre": "^1.0.0",
+    "babel-preset-react-hmre": "^1.1.1",
     "babel-register": "^6.26.0",
     "chokidar": "^2.0.0",
     "cloudfront-invalidate-cli": "^1.4.0",
     "cross-env": "^5.1.3",
-    "css-loader": "^0.28.7",
+    "css-loader": "^0.28.9",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
-    "eslint": "3.19.0",
+    "eslint": "^4.16.0",
     "eslint-plugin-babel": "^4.1.2",
-    "eslint-plugin-react": "^7.5.1",
-    "expect": "^1.20.2",
+    "eslint-plugin-react": "^7.6.0",
+    "expect": "^22.1.0",
     "expose-loader": "^0.7.4",
     "express": "^4.16.2",
-    "flow-bin": "^0.62.0",
+    "flow-bin": "^0.64.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^3.0.0",
     "isparta": "^4.0.0",
     "jest": "^22.1.4",
-    "jsdom": "^11.5.1",
-    "lint-staged": "^6.0.0",
+    "jsdom": "^11.6.1",
+    "lint-staged": "^6.1.0",
     "node-sass": "^4.7.2",
     "nyc": "^11.4.1",
     "prettier-standard": "^8.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
-    "react-styleguidist": "^6.1.0",
+    "react-styleguidist": "^6.2.0",
     "react-test-renderer": "^16.2.0",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
@@ -121,11 +122,11 @@
     "sass-loader": "^6.0.6",
     "snazzy": "^7.0.0",
     "standard": "^10.0.3",
-    "style-loader": "^0.19.1",
-    "uglifyjs-webpack-plugin": "^1.1.5",
+    "style-loader": "^0.20.1",
+    "uglifyjs-webpack-plugin": "^1.1.6",
     "webpack": "^3.10.0",
     "webpack-bundle-size-analyzer": "^2.7.0",
-    "webpack-dev-middleware": "^2.0.3",
+    "webpack-dev-middleware": "^2.0.4",
     "webpack-hot-middleware": "^2.21.0"
   },
   "peerDependencies": {
@@ -138,19 +139,19 @@
   "dependencies": {
     "@olasearch/icons": "^1.0.0",
     "@olasearch/react-onclickoutside": "^1.0.0",
-    "babel-runtime": "^6.25.0",
+    "babel-runtime": "^6.26.0",
     "classnames": "^2.2.5",
     "dom-scroll-into-view": "^1.2.1",
     "fecha": "^2.3.2",
     "hoist-non-react-statics": "^2.3.1",
     "ismobilejs": "^0.4.1",
-    "nouislider": "^11.0.0",
+    "nouislider": "^11.0.3",
     "prop-types": "^15.6.0",
     "query-string": "^5.0.1",
     "ramda": "^0.25.0",
     "react-line-progress": "^1.0.3",
     "react-list": "^0.8.8",
-    "react-pikaday-datepicker": "3.0.1",
+    "react-pikaday-datepicker": "^3.0.1",
     "redux-logger": "^3.0.6",
     "xss-filters": "^1.2.7"
   },
