--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "test": "jest",
     "test:watch": "npm run test -- --watch",
     "coverage": "cross-env BABEL_ENV=production babel-node $(npm bin)/isparta cover $(npm bin)/_mocha -- --recursive",
-    "retire": "retire",
     "s3:deploy": "s3-deploy './dist/olasearch.core.min.latest.js' './dist/olasearch.init.min.js' './dist/olasearch.init.client_demo.min.js' --cwd './dist/' --region ap-southeast-1 --bucket configs.olasearch.com/assets/js --cache 604800,public && s3-deploy './dist/olasearch.core.min.css' './dist/olasearch.core.client_demo.min.css'  --cwd './dist/' --region ap-southeast-1 --bucket configs.olasearch.com/assets/css --cache 604800,public",
     "cdn:invalidate": "cf-invalidate E1MMHSLEW3SZPY /assets/*",
     "docs": "styleguidist server",
@@ -46,8 +45,7 @@
       "/test",
       "/lib",
       "/src/polyfill.js",
-      "/node_modules",
-      "src/components/Answer/AnswerQuick.js"
+      "/node_modules"
     ]
   },
   "nyc": {
@@ -105,9 +103,9 @@
     "isparta": "^4.0.0",
     "jest": "^22.1.4",
     "jsdom": "^11.6.1",
-    "lint-staged": "^6.1.0",
     "node-sass": "^4.7.2",
     "nyc": "^11.4.1",
+    "pre-commit": "^1.2.2",
     "prettier-standard": "^8.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
@@ -155,7 +153,7 @@
     "redux-logger": "^3.0.6",
     "xss-filters": "^1.2.7"
   },
-  "lint-staged": [
+  "pre-commit": [
     "prettier-standard"
   ]
 }
