--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "cdn:invalidate": "cf-invalidate E1MMHSLEW3SZPY /assets/*",
     "docs": "styleguidist server",
     "docs:build": "styleguidist build",
-    "prettier-standard": "prettier-standard 'src/**/!(polyfill)*.js'"
+    "prettier-standard": "prettier-standard 'src/**/!(polyfill)*.js'",
+    "prettier": "yarn prettier-standard && git add . && git status"
   },
   "prettier": {
     "semi": false
@@ -154,6 +155,7 @@
     "xss-filters": "^1.2.7"
   },
   "pre-commit": [
-    "prettier-standard"
+    "test",
+    "prettier"
   ]
 }
