--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@olasearch/core",
-  "version": "2.3.6",
+  "version": "2.3.7",
   "description": "OlaSearch is a fully customisable front-end search interface that brings your information collection to life.",
   "main": "lib/index.js",
   "scripts": {
@@ -72,38 +72,38 @@
     "testURL": "http://localhost/"
   },
   "devDependencies": {
-    "@olasearch/logger": "^1.2.0",
-    "@olasearch/solr-adapter": "^1.4.7",
+    "@olasearch/logger": "^1.2.1",
+    "@olasearch/solr-adapter": "^1.5.4",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.1",
-    "babel-jest": "^22.1.0",
+    "babel-jest": "^22.2.2",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-olasearch": "^1.0.4",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-register": "^6.26.0",
-    "chokidar": "^2.0.0",
+    "chokidar": "^2.0.1",
     "cloudfront-invalidate-cli": "^1.4.0",
     "cross-env": "^5.1.3",
     "css-loader": "^0.28.9",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
-    "eslint": "^4.16.0",
+    "eslint": "^4.17.0",
     "eslint-plugin-babel": "^4.1.2",
-    "eslint-plugin-react": "^7.6.0",
-    "expect": "^22.1.0",
+    "eslint-plugin-react": "^7.6.1",
+    "expect": "^22.2.2",
     "expose-loader": "^0.7.4",
     "express": "^4.16.2",
-    "flow-bin": "^0.64.0",
+    "flow-bin": "^0.65.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^3.0.0",
     "isparta": "^4.0.0",
-    "jest": "^22.1.4",
-    "jsdom": "^11.6.1",
+    "jest": "^22.2.2",
+    "jsdom": "^11.6.2",
     "microbundle": "^0.4.3",
     "node-sass": "^4.7.2",
     "nyc": "^11.4.1",
@@ -112,22 +112,22 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
-    "react-styleguidist": "^6.2.0",
+    "react-styleguidist": "^6.2.3",
     "react-test-renderer": "^16.2.0",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
-    "retire": "^1.4.0",
+    "retire": "^1.5.1",
     "rimraf": "^2.6.2",
-    "s3-deploy": "^0.8.0",
+    "s3-deploy": "^0.9.0",
     "sass-loader": "^6.0.6",
     "snazzy": "^7.0.0",
     "standard": "^10.0.3",
     "style-loader": "^0.20.1",
-    "uglifyjs-webpack-plugin": "^1.1.6",
+    "uglifyjs-webpack-plugin": "^1.1.8",
     "webpack": "next",
     "webpack-bundle-size-analyzer": "^2.7.0",
     "webpack-cli": "^2.0.4",
-    "webpack-dev-middleware": "^2.0.4",
+    "webpack-dev-middleware": "^2.0.5",
     "webpack-hot-middleware": "^2.21.0"
   },
   "peerDependencies": {
@@ -138,8 +138,9 @@
     "redux-thunk": "^2.2.0"
   },
   "dependencies": {
-    "@olasearch/icons": "^1.0.0",
+    "@olasearch/icons": "^1.0.1",
     "@olasearch/react-onclickoutside": "^6.7.1-rc",
+    "@olasearch/styled-jsx": "^2.2.5",
     "babel-runtime": "^6.26.0",
     "classnames": "^2.2.5",
     "create-react-context": "^0.1.6",
@@ -149,7 +150,7 @@
     "ismobilejs": "^0.4.1",
     "nouislider": "^11.0.3",
     "prop-types": "^15.6.0",
-    "query-string": "^5.0.1",
+    "query-string": "^5.1.0",
     "ramda": "^0.25.0",
     "react-line-progress": "^1.0.3",
     "react-list": "^0.8.8",
