--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@olasearch/core",
-  "version": "2.4.1",
+  "version": "2.4.2",
   "description": "OlaSearch is a fully customisable front-end search interface that brings your information collection to life.",
   "main": "lib/index.js",
   "scripts": {
@@ -72,13 +72,13 @@
     "testURL": "http://localhost/"
   },
   "devDependencies": {
-    "@olasearch/logger": "^1.2.1",
-    "@olasearch/solr-adapter": "^1.5.7",
+    "@olasearch/logger": "^1.2.6",
+    "@olasearch/solr-adapter": "^1.6.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.1",
-    "babel-jest": "^22.2.2",
-    "babel-loader": "^7.1.2",
+    "babel-eslint": "^8.2.2",
+    "babel-jest": "^22.4.1",
+    "babel-loader": "^7.1.3",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-olasearch": "^1.0.4",
@@ -87,13 +87,13 @@
     "chokidar": "^2.0.2",
     "cloudfront-invalidate-cli": "^1.4.0",
     "cross-env": "^5.1.3",
-    "css-loader": "^0.28.9",
+    "css-loader": "^0.28.10",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
-    "eslint": "^4.18.0",
+    "eslint": "^4.18.1",
     "eslint-plugin-babel": "^4.1.2",
-    "eslint-plugin-react": "^7.6.1",
-    "expect": "^22.3.0",
+    "eslint-plugin-react": "^7.7.0",
+    "expect": "^22.4.0",
     "expose-loader": "^0.7.4",
     "express": "^4.16.2",
     "flow-bin": "^0.66.0",
@@ -102,9 +102,8 @@
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^3.0.0",
     "isparta": "^4.0.0",
-    "jest": "^22.3.0",
+    "jest": "^22.4.2",
     "jsdom": "^11.6.2",
-    "microbundle": "^0.4.3",
     "node-sass": "^4.7.2",
     "nyc": "^11.4.1",
     "pre-commit": "^1.2.2",
@@ -118,16 +117,16 @@
     "redux-thunk": "^2.2.0",
     "retire": "^1.5.1",
     "rimraf": "^2.6.2",
-    "s3-deploy": "^0.9.0",
+    "s3-deploy": "^0.10.0",
     "sass-loader": "^6.0.6",
-    "snazzy": "^7.0.0",
-    "standard": "^10.0.3",
+    "snazzy": "^7.1.0",
+    "standard": "^11.0.0",
     "style-loader": "^0.20.2",
-    "uglifyjs-webpack-plugin": "^1.2.0",
-    "webpack": "next",
+    "uglifyjs-webpack-plugin": "^1.2.2",
+    "webpack": "^4.0.1",
     "webpack-bundle-size-analyzer": "^2.7.0",
-    "webpack-cli": "^2.0.6",
-    "webpack-dev-middleware": "^2.0.5",
+    "webpack-cli": "^2.0.9",
+    "webpack-dev-middleware": "^2.0.6",
     "webpack-hot-middleware": "^2.21.0"
   },
   "peerDependencies": {
@@ -143,20 +142,19 @@
     "@olasearch/styled-jsx": "^2.2.6",
     "babel-runtime": "^6.26.0",
     "classnames": "^2.2.5",
-    "create-react-context": "^0.1.6",
+    "create-react-context": "^0.2.1",
     "dom-scroll-into-view": "^1.2.1",
-    "fecha": "^2.3.2",
+    "fecha": "^2.3.3",
     "hoist-non-react-statics": "^2.5.0",
     "ismobilejs": "^0.4.1",
     "nouislider": "^11.0.3",
-    "prop-types": "^15.6.0",
+    "prop-types": "^15.6.1",
     "query-string": "^5.1.0",
     "ramda": "^0.25.0",
     "react-line-progress": "^1.0.3",
     "react-list": "^0.8.8",
     "react-pikaday-datepicker": "^3.0.1",
     "redux-logger": "^3.0.6",
-    "styled-jsx": "^2.2.3",
     "xss-filters": "^1.2.7"
   },
   "pre-commit": [
