--- a/package.json
+++ b/package.json
@@ -108,9 +108,9 @@
     "nyc": "^11.4.1",
     "pre-commit": "^1.2.2",
     "prettier-standard": "^8.0.0",
-    "react": "^16.3.0-alpha.1",
+    "react": "^16.2.0",
     "react-async-load-script": "^1.0.6",
-    "react-dom": "^16.3.0-alpha.1",
+    "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
     "react-styleguidist": "^6.2.7",
     "react-test-renderer": "^16.2.0",
