--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "npm run standard && eslint src",
     "nyc": "nyc npm run test",
     "test": "jest",
+    "test:middleware": "NODE_ENV=production jest --watch __tests__/middleware",
     "test:watch": "npm run test -- --watch",
     "coverage": "cross-env BABEL_ENV=production babel-node $(npm bin)/isparta cover $(npm bin)/_mocha -- --recursive",
     "s3:deploy": "s3-deploy './dist/olasearch.core.min.latest.js' './dist/olasearch.init.min.js' './dist/olasearch.init.client_demo.min.js' --cwd './dist/' --region ap-southeast-1 --bucket configs.olasearch.com/assets/js --cache 604800,public && s3-deploy './dist/olasearch.core.min.css' './dist/olasearch.core.client_demo.min.css'  --cwd './dist/' --region ap-southeast-1 --bucket configs.olasearch.com/assets/css --cache 604800,public",
