--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@olasearch/core",
-  "version": "3.1.0",
+  "version": "3.1.1",
   "description": "OlaSearch is a fully customisable front-end search interface that brings your information collection to life.",
   "main": "lib/index.js",
   "scripts": {
@@ -77,7 +77,7 @@
     "@olasearch/solr-adapter": "^1.8.4",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.2",
+    "babel-eslint": "^8.2.3",
     "babel-jest": "^22.4.3",
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-runtime": "^6.23.0",
@@ -120,7 +120,7 @@
     "retire": "^1.6.0",
     "rimraf": "^2.6.2",
     "s3-deploy": "^0.10.0",
-    "sass-loader": "^6.0.7",
+    "sass-loader": "^7.0.1",
     "snazzy": "^7.1.1",
     "standard": "^11.0.1",
     "style-loader": "^0.20.3",
@@ -139,7 +139,7 @@
     "redux-thunk": "^2.2.0"
   },
   "dependencies": {
-    "@olasearch/icons": "^1.0.1",
+    "@olasearch/icons": "^1.0.2",
     "@olasearch/react-onclickoutside": "^6.7.1-rc",
     "@olasearch/styled-jsx": "^2.2.6",
     "babel-runtime": "^6.26.0",
@@ -150,7 +150,7 @@
     "ismobilejs": "^0.4.1",
     "nouislider": "^11.0.3",
     "prop-types": "^15.6.1",
-    "query-string": "^6.0.0",
+    "query-string": "5.1.1",
     "ramda": "^0.25.0",
     "react-line-progress": "^1.0.3",
     "react-list": "^0.8.8",
