--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@olasearch/core",
-  "version": "3.1.7",
+  "version": "3.1.8",
   "description": "OlaSearch is a fully customisable front-end search interface that brings your information collection to life.",
   "main": "lib/index.js",
   "scripts": {
     "clean": "rimraf dist lib",
     "watch": "BABEL_ENV=production babel --watch src --out-dir lib",
     "build": "BABEL_ENV=production babel src --out-dir lib",
-    "release": "cross-env NODE_ENV=production webpack --config webpack.release.js && gulp build && rimraf dist/polyfill.js dist/olasearch.core.latest.js && gulp styles",
+    "release": "cross-env NODE_ENV=production webpack --config webpack.release.js --json > stats.json && gulp build && rimraf dist/polyfill.js dist/olasearch.core.latest.js && gulp styles",
     "lint": "npm run standard && eslint src",
     "nyc": "nyc npm run test",
     "test": "jest",
@@ -76,7 +76,7 @@
     "@olasearch/logger": "^1.3.6",
     "@olasearch/solr-adapter": "^1.8.7",
     "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.3",
     "babel-jest": "^22.4.3",
     "babel-loader": "^7.1.4",
@@ -97,7 +97,7 @@
     "expect": "^22.4.3",
     "expose-loader": "^0.7.5",
     "express": "^4.16.3",
-    "flow-bin": "^0.70.0",
+    "flow-bin": "^0.71.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-rename": "^1.2.2",
@@ -116,7 +116,7 @@
     "react-test-renderer": "^16.3.2",
     "retire": "^1.6.0",
     "rimraf": "^2.6.2",
-    "s3-deploy": "^0.10.0",
+    "s3-deploy": "^0.11.0",
     "sass-loader": "^7.0.1",
     "snazzy": "^7.1.1",
     "standard": "^11.0.1",
@@ -125,7 +125,7 @@
     "webpack": "^4.6.0",
     "webpack-bundle-size-analyzer": "^2.7.0",
     "webpack-cli": "^2.0.15",
-    "webpack-dev-middleware": "^3.1.2",
+    "webpack-dev-middleware": "^3.1.3",
     "webpack-hot-middleware": "^2.22.1"
   },
   "peerDependencies": {
@@ -137,7 +137,8 @@
   },
   "dependencies": {
     "@olasearch/icons": "^1.0.2",
-    "@olasearch/react-onclickoutside": "^6.7.1-rc",
+    "@olasearch/react-frame-portal": "^3.0.2",
+    "@olasearch/react-onclickoutside": "^6.7.3",
     "@olasearch/styled-jsx": "^2.2.6",
     "babel-runtime": "^6.26.0",
     "classnames": "^2.2.5",
@@ -151,6 +152,7 @@
     "ramda": "^0.25.0",
     "react-line-progress": "^1.0.3",
     "react-list": "^0.8.8",
+    "react-loadable": "^5.3.1",
     "react-pikaday-datepicker": "^3.0.1",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
