Use corejs polyfills

--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@olasearch/core",
-  "version": "3.3.8",
+  "version": "3.3.9",
   "description": "OlaSearch is a fully customisable front-end search interface that brings your information collection to life.",
   "main": "lib/index.js",
   "scripts": {
     "clean": "rimraf dist lib",
     "watch": "BABEL_ENV=production babel --watch src --out-dir lib",
     "build": "BABEL_ENV=production babel src --out-dir lib",
-    "release": "cross-env NODE_ENV=production webpack --config webpack.release.js --json > stats.json && gulp build && rimraf dist/polyfill.js dist/olasearch.core.latest.js && gulp styles",
+    "release": "cross-env NODE_ENV=production webpack --config webpack.release.js --json > stats.json && gulp styles",
     "lint": "npm run standard && eslint src",
     "nyc": "nyc npm run test",
     "test": "jest",
@@ -74,7 +74,7 @@
   },
   "devDependencies": {
     "@olasearch/logger": "^1.3.8",
-    "@olasearch/solr-adapter": "^1.9.1",
+    "@olasearch/solr-adapter": "^1.9.2",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.3",
@@ -99,9 +99,6 @@
     "express": "^4.16.3",
     "flow-bin": "^0.72.0",
     "gulp": "^3.9.1",
-    "gulp-concat": "^2.6.1",
-    "gulp-rename": "^1.2.2",
-    "gulp-uglify": "^3.0.0",
     "isparta": "^4.0.0",
     "jest": "^22.4.3",
     "jsdom": "^11.10.0",
@@ -111,7 +108,7 @@
     "prettier-standard": "^8.0.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "react-styleguidist": "^7.0.13",
+    "react-styleguidist": "^7.0.14",
     "react-test-renderer": "^16.3.2",
     "retire": "^1.6.0",
     "rimraf": "^2.6.2",
@@ -140,6 +137,7 @@
     "@olasearch/styled-jsx": "^2.2.6",
     "babel-runtime": "^6.26.0",
     "classnames": "^2.2.5",
+    "core-js": "^2.5.6",
     "dom-scroll-into-view": "^1.2.1",
     "fecha": "^2.3.3",
     "hoist-non-react-statics": "^2.5.0",
