--- a/package.json
+++ b/package.json
@@ -106,11 +106,14 @@
     "node-sass": "^4.9.0",
     "nyc": "^12.0.2",
     "pre-commit": "^1.2.2",
-    "prettier-standard": "^8.0.1",
-    "react": "^16.4.0",
-    "react-dom": "^16.4.0",
+    "prettier-standard": "^8.0.1",    
     "react-styleguidist": "^7.0.16",
     "react-test-renderer": "^16.4.0",
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.2.0",
     "retire": "^1.6.0",
     "rimraf": "^2.6.2",
     "s3-deploy": "^1.0.0",
@@ -126,8 +129,8 @@
     "webpack-hot-middleware": "^2.22.2"
   },
   "peerDependencies": {
-    "react": "^16.4.0",
-    "react-dom": "^16.4.0",
+    "react": ">=16.3.0",
+    "react-dom": ">=16.3.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-thunk": "^2.2.0"
@@ -156,7 +159,7 @@
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "xss-filters": "^1.2.7"
+    "xss-filters": "^1.2.7"    
   },
   "pre-commit": [
     "test",
