Package polyfill before library

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "clean": "rimraf dist lib",
     "watch": "BABEL_ENV=production babel --watch src --out-dir lib",
     "build": "BABEL_ENV=production babel src --out-dir lib",
-    "release": "cross-env NODE_ENV=production webpack --config webpack.release.js --json > stats.json && gulp styles",
+    "release": "cross-env NODE_ENV=production webpack --config webpack.release.js --json > stats.json && npm run polyfill && gulp",
+    "polyfill": "cross-env NODE_ENV=production webpack --config webpack.polyfill.js",
     "lint": "npm run standard && eslint src",
     "nyc": "nyc npm run test",
     "test": "jest",
@@ -100,6 +101,8 @@
     "express": "^4.16.3",
     "flow-bin": "^0.74.0",
     "gulp": "^3.9.1",
+    "gulp-clean": "^0.4.0",
+    "gulp-concat": "^2.6.1",
     "isparta": "^4.0.0",
     "jest": "^23.1.0",
     "jsdom": "^11.11.0",
