--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@olasearch/core",
-  "version": "3.8.3",
+  "version": "3.8.5",
   "description": "OlaSearch is a fully customisable front-end search interface that brings your information collection to life.",
   "main": "lib/index.js",
   "scripts": {
@@ -76,7 +76,7 @@
   },
   "devDependencies": {
     "@olasearch/logger": "^1.4.1",
-    "@olasearch/solr-adapter": "^2.0.0",
+    "@olasearch/solr-adapter": "^2.0.1",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.3",
@@ -89,7 +89,7 @@
     "babel-register": "^6.26.0",
     "chokidar": "^2.0.3",
     "cloudfront-invalidate-cli": "^1.4.0",
-    "cross-env": "^5.1.6",
+    "cross-env": "^5.2.0",
     "css-loader": "^0.28.11",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
@@ -110,11 +110,11 @@
     "nyc": "^12.0.2",
     "pre-commit": "^1.2.2",
     "prettier-standard": "^8.0.1",
-    "react": "^16.4.0",
-    "react-dom": "^16.4.0",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
     "react-styleguidist": "^7.0.17",
-    "react-test-renderer": "^16.4.0",
+    "react-test-renderer": "^16.4.1",
     "redux": "^4.0.0",
     "redux-thunk": "^2.2.0",
     "retire": "^1.6.1",
@@ -127,7 +127,7 @@
     "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack": "^4.12.0",
     "webpack-bundle-size-analyzer": "^2.7.0",
-    "webpack-cli": "^3.0.4",
+    "webpack-cli": "^3.0.6",
     "webpack-dev-middleware": "^3.1.3",
     "webpack-hot-middleware": "^2.22.2"
   },
@@ -151,7 +151,7 @@
     "ismobilejs": "^0.4.1",
     "nouislider": "^11.1.0",
     "prop-types": "^15.6.1",
-    "query-string": "5.1.1",
+    "query-string": "^6.1.0",
     "ramda": "^0.25.0",
     "react-async-load-script": "^1.0.6",
     "react-line-progress": "^1.0.3",
