--- a/package.json
+++ b/package.json
@@ -151,7 +151,7 @@
     "ismobilejs": "^0.4.1",
     "nouislider": "^11.1.0",
     "prop-types": "^15.6.1",
-    "query-string": "^6.1.0",
+    "query-string": "5.1.1",
     "ramda": "^0.25.0",
     "react-async-load-script": "^1.0.6",
     "react-line-progress": "^1.0.3",
