--- a/.eslintrc
+++ b/.eslintrc
@@ -9,10 +9,10 @@
   },
   "parser": "babel-eslint",
   "rules": {
-    "quotes": [2, "single"],
+    "quotes": [2, "single", {"avoidEscape": true}],
     "strict": [2, "never"],
     "generator-star-spacing": 1,
-    "new-cap": 1,
+    "new-cap": 0,
     "object-shorthand": 1,
     "arrow-parens": 1,
     "no-await-in-loop": 1,
@@ -21,7 +21,7 @@
     "react/jsx-no-undef": 2,
     "react/react-in-jsx-scope": 2,
     "react/jsx-wrap-multilines": 2,
-    "react/jsx-no-bind": 2,
+    "react/jsx-no-bind": 0,
     "react/prefer-stateless-function": 2
   },
   "plugins": [
