Fix eslint errors

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,4 @@
-{
-  "ecmaFeatures": {
-    "jsx": true,
-    "modules": true
-  },
+{  
   "env": {
     "browser": true,
     "node": true
@@ -16,7 +12,8 @@
     "object-shorthand": 1,
     "arrow-parens": 1,
     "no-await-in-loop": 1,
-    "react/jsx-uses-react": 2,
+    "no-unused-vars": 2,
+    "react/jsx-uses-react": 2,    
     "react/jsx-uses-vars": 2,
     "react/jsx-no-undef": 2,
     "react/react-in-jsx-scope": 2,
